extends Node2D

# Ð¡ÑÑ‹Ð»ÐºÐ¸ Ð½Ð° ÑÑ†ÐµÐ½Ñ‹
@onready var map_generator: Node = $MapGenerator
@onready var party: Node = $Party
@onready var camera: Camera2D = $Camera2D
@onready var path_line: Line2D = $PathLine
@onready var ui_log: Label = $UI/EventLog

# Ð¡Ð¾ÑÑ‚Ð¾ÑÐ½Ð¸Ðµ ÐºÐ°Ñ€Ñ‚Ñ‹
var map_points: Array = []        # Ð’ÑÐµ Ñ‚Ð¾Ñ‡ÐºÐ¸ ÐºÐ°Ñ€Ñ‚Ñ‹ (MapPointData)
var point_nodes: Array = []       # Ð’ÑÐµ ÑƒÐ·Ð»Ñ‹ Ñ‚Ð¾Ñ‡ÐµÐº (MapPoint)
var selected_path_id: int = -1    # ID Ð²Ñ‹Ð±Ñ€Ð°Ð½Ð½Ð¾Ð³Ð¾ Ð¿ÑƒÑ‚Ð¸
var is_path_selected: bool = false # Ð’Ñ‹Ð±Ñ€Ð°Ð½ Ð»Ð¸ Ð¿ÑƒÑ‚ÑŒ

# ÐÐ°ÑÑ‚Ñ€Ð¾Ð¹ÐºÐ¸ ÐºÐ°Ð¼ÐµÑ€Ñ‹
@export var camera_offset: Vector2 = Vector2(0, -50)  # Ð¡Ð¼ÐµÑ‰ÐµÐ½Ð¸Ðµ ÐºÐ°Ð¼ÐµÑ€Ñ‹ Ð²Ð²ÐµÑ€Ñ…

func _ready():
	print("ExpeditionMap: Ð˜Ð½Ð¸Ñ†Ð¸Ð°Ð»Ð¸Ð·Ð°Ñ†Ð¸Ñ...")
	
	# ÐŸÑ€Ð¾Ð²ÐµÑ€ÑÐµÐ¼, Ñ‡Ñ‚Ð¾ Ð²ÑÐµ Ð½ÐµÐ¾Ð±Ñ…Ð¾Ð´Ð¸Ð¼Ñ‹Ðµ ÑƒÐ·Ð»Ñ‹ Ð½Ð°Ð¹Ð´ÐµÐ½Ñ‹
	if not map_generator:
		print("ÐžÐ¨Ð˜Ð‘ÐšÐ: MapGenerator Ð½Ðµ Ð½Ð°Ð¹Ð´ÐµÐ½!")
		return
	if not party:
		print("ÐžÐ¨Ð˜Ð‘ÐšÐ: Party Ð½Ðµ Ð½Ð°Ð¹Ð´ÐµÐ½!")
		return
	if not camera:
		print("ÐžÐ¨Ð˜Ð‘ÐšÐ: Camera2D Ð½Ðµ Ð½Ð°Ð¹Ð´ÐµÐ½!")
		return
	if not path_line:
		print("ÐžÐ¨Ð˜Ð‘ÐšÐ: PathLine Ð½Ðµ Ð½Ð°Ð¹Ð´ÐµÐ½!")
		return
	
	# ÐÐ°ÑÑ‚Ñ€Ð°Ð¸Ð²Ð°ÐµÐ¼ ÐºÐ°Ð¼ÐµÑ€Ñƒ
	setup_camera()
	
	# ÐŸÐ¾Ð´ÐºÐ»ÑŽÑ‡Ð°ÐµÐ¼ ÑÐ¸Ð³Ð½Ð°Ð»Ñ‹
	connect_signals()
	
	# Ð“ÐµÐ½ÐµÑ€Ð¸Ñ€ÑƒÐµÐ¼ Ð½Ð°Ñ‡Ð°Ð»ÑŒÐ½Ñ‹Ð¹ ÑÐµÐ³Ð¼ÐµÐ½Ñ‚
	await generate_initial_map()

func setup_camera():
	"""ÐÐ°ÑÑ‚Ñ€Ð°Ð¸Ð²Ð°ÐµÑ‚ ÐºÐ°Ð¼ÐµÑ€Ñƒ"""
	if camera:
		camera.enabled = true
		camera.position_smoothing_enabled = true
		camera.position_smoothing_speed = 5.0
		camera.zoom = Vector2(0.8, 0.8)
	else:
		print("ÐžÐ¨Ð˜Ð‘ÐšÐ: ÐšÐ°Ð¼ÐµÑ€Ð° Ð½Ðµ Ð½Ð°Ð¹Ð´ÐµÐ½Ð°!")

func connect_signals():
	"""ÐŸÐ¾Ð´ÐºÐ»ÑŽÑ‡Ð°ÐµÑ‚ Ð²ÑÐµ Ð½ÐµÐ¾Ð±Ñ…Ð¾Ð´Ð¸Ð¼Ñ‹Ðµ ÑÐ¸Ð³Ð½Ð°Ð»Ñ‹"""
	# Ð¡Ð¸Ð³Ð½Ð°Ð» Ð´Ð¾ÑÑ‚Ð¸Ð¶ÐµÐ½Ð¸Ñ Ñ‚Ð¾Ñ‡ÐºÐ¸ Ð¾Ñ‚Ñ€ÑÐ´Ð¾Ð¼
	party.reached_point.connect(on_party_reached_point)
	party.movement_completed.connect(on_party_movement_completed)

func generate_initial_map():
	"""Ð“ÐµÐ½ÐµÑ€Ð¸Ñ€ÑƒÐµÑ‚ Ð½Ð°Ñ‡Ð°Ð»ÑŒÐ½ÑƒÑŽ ÐºÐ°Ñ€Ñ‚Ñƒ"""
	print("Ð“ÐµÐ½ÐµÑ€Ð¸Ñ€ÑƒÐµÐ¼ Ð½Ð°Ñ‡Ð°Ð»ÑŒÐ½ÑƒÑŽ ÐºÐ°Ñ€Ñ‚Ñƒ...")
	
	# Ð“ÐµÐ½ÐµÑ€Ð¸Ñ€ÑƒÐµÐ¼ Ð½Ð°Ñ‡Ð°Ð»ÑŒÐ½Ñ‹Ð¹ ÑÐµÐ³Ð¼ÐµÐ½Ñ‚
	map_points = map_generator.generate_initial_segment()
	
	# Ð¡Ð¾Ð·Ð´Ð°ÐµÐ¼ ÑƒÐ·Ð»Ñ‹ Ñ‚Ð¾Ñ‡ÐµÐº
	await create_point_nodes()
	
	# ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÐ¼ Ð»Ð¸Ð½Ð¸Ð¸ Ð¿ÑƒÑ‚Ð¸
	update_path_lines()
	
	# Ð£ÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÐ¼ Ð¿ÑƒÑ‚ÑŒ Ð´Ð»Ñ Ð¾Ñ‚Ñ€ÑÐ´Ð°
	set_party_path()
	
	log_message("ÐšÐ°Ñ€Ñ‚Ð° ÑÐ³ÐµÐ½ÐµÑ€Ð¸Ñ€Ð¾Ð²Ð°Ð½Ð°! ÐšÐ»Ð¸ÐºÐ½Ð¸Ñ‚Ðµ Ð¿Ð¾ Ñ‚Ð¾Ñ‡ÐºÐµ Ñ€Ð°Ð·Ð²Ð¸Ð»ÐºÐ¸ Ð´Ð»Ñ Ð²Ñ‹Ð±Ð¾Ñ€Ð° Ð¿ÑƒÑ‚Ð¸.")

func create_point_nodes():
	"""Ð¡Ð¾Ð·Ð´Ð°ÐµÑ‚ ÑƒÐ·Ð»Ñ‹ Ñ‚Ð¾Ñ‡ÐµÐº Ð½Ð° ÐºÐ°Ñ€Ñ‚Ðµ"""
	# ÐžÑ‡Ð¸Ñ‰Ð°ÐµÐ¼ ÑÑ‚Ð°Ñ€Ñ‹Ðµ ÑƒÐ·Ð»Ñ‹
	for node in point_nodes:
		if is_instance_valid(node):
			node.queue_free()
	point_nodes.clear()
	
	# Ð¡Ð¾Ð·Ð´Ð°ÐµÐ¼ Ð½Ð¾Ð²Ñ‹Ðµ ÑƒÐ·Ð»Ñ‹ Ð¿Ñ€Ð¾Ð³Ñ€Ð°Ð¼Ð¼Ð½Ð¾
	for point_data in map_points:
		var point_node = await create_map_point_node(point_data)
		if point_node:
			point_nodes.append(point_node)
	
	print("Ð¡Ð¾Ð·Ð´Ð°Ð½Ð¾ ", point_nodes.size(), " ÑƒÐ·Ð»Ð¾Ð² Ñ‚Ð¾Ñ‡ÐµÐº")

func create_map_point_node(point_data) -> Node:
	"""Ð¡Ð¾Ð·Ð´Ð°ÐµÑ‚ ÑƒÐ·ÐµÐ» Ñ‚Ð¾Ñ‡ÐºÐ¸ ÐºÐ°Ñ€Ñ‚Ñ‹ Ð¿Ñ€Ð¾Ð³Ñ€Ð°Ð¼Ð¼Ð½Ð¾"""
	# Ð¡Ð¾Ð·Ð´Ð°ÐµÐ¼ Area2D
	var area2d = Area2D.new()
	area2d.position = point_data.position
	
	# Ð¡Ð¾Ð·Ð´Ð°ÐµÐ¼ CollisionShape2D
	var collision_shape = CollisionShape2D.new()
	var rect_shape = RectangleShape2D.new()
	rect_shape.size = Vector2(40, 40)
	collision_shape.shape = rect_shape
	area2d.add_child(collision_shape)
	
	# Ð¡Ð¾Ð·Ð´Ð°ÐµÐ¼ Background (ColorRect)
	var background = ColorRect.new()
	background.name = "Background"  # Ð’Ð°Ð¶Ð½Ð¾: ÑƒÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÐ¼ Ð¸Ð¼Ñ
	background.anchors_preset = Control.PRESET_CENTER
	background.offset_left = -20.0
	background.offset_top = -20.0
	background.offset_right = 20.0
	background.offset_bottom = 20.0
	background.color = Color.WHITE
	area2d.add_child(background)
	
	# Ð¡Ð¾Ð·Ð´Ð°ÐµÐ¼ Icon (Label)
	var icon = Label.new()
	icon.name = "Icon"  # Ð’Ð°Ð¶Ð½Ð¾: ÑƒÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÐ¼ Ð¸Ð¼Ñ
	icon.anchors_preset = Control.PRESET_CENTER
	icon.offset_left = -15.0
	icon.offset_top = -15.0
	icon.offset_right = 15.0
	icon.offset_bottom = 15.0
	icon.text = "â€¢"
	icon.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	icon.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
	area2d.add_child(icon)
	
	# Ð–Ð´ÐµÐ¼ Ð¾Ð´Ð¸Ð½ ÐºÐ°Ð´Ñ€ Ð´Ð»Ñ Ð¿Ñ€Ð°Ð²Ð¸Ð»ÑŒÐ½Ð¾Ð¹ Ð¸Ð½Ð¸Ñ†Ð¸Ð°Ð»Ð¸Ð·Ð°Ñ†Ð¸Ð¸
	await get_tree().process_frame
	
	# Ð”Ð¾Ð±Ð°Ð²Ð»ÑÐµÐ¼ Ð² ÑÑ†ÐµÐ½Ñƒ
	add_child(area2d)
	
	# Ð—Ð°Ð³Ñ€ÑƒÐ¶Ð°ÐµÐ¼ Ð¸ ÑƒÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÐ¼ ÑÐºÑ€Ð¸Ð¿Ñ‚
	var script = load("res://MapPoint.gd")
	if script:
		area2d.set_script(script)
		# Ð£ÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÐ¼ ÑÐ²Ð¾Ð¹ÑÑ‚Ð²Ð°
		area2d.set("point_id", point_data.id)
		area2d.set("event_type", point_data.event_type)
		area2d.set("is_branch_point", point_data.is_branch)
		area2d.set("is_visited", point_data.is_visited)
		area2d.set("is_current", point_data.is_current)
		
		# ÐŸÐ¾Ð´ÐºÐ»ÑŽÑ‡Ð°ÐµÐ¼ ÑÐ¸Ð³Ð½Ð°Ð» ÐºÐ»Ð¸ÐºÐ°
		area2d.point_clicked.connect(_on_point_selected)
		
		# ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÐ¼ Ð²Ð½ÐµÑˆÐ½Ð¸Ð¹ Ð²Ð¸Ð´
		update_point_appearance_directly(area2d, point_data)
	else:
		print("ÐŸÐ Ð•Ð”Ð£ÐŸÐ Ð•Ð–Ð”Ð•ÐÐ˜Ð•: ÐÐµ ÑƒÐ´Ð°Ð»Ð¾ÑÑŒ Ð·Ð°Ð³Ñ€ÑƒÐ·Ð¸Ñ‚ÑŒ MapPoint.gd, ÑÐ¾Ð·Ð´Ð°ÐµÐ¼ Ð¿Ñ€Ð¾ÑÑ‚ÑƒÑŽ Ñ‚Ð¾Ñ‡ÐºÑƒ")
		# Fallback: ÑÐ¾Ð·Ð´Ð°ÐµÐ¼ Ð¿Ñ€Ð¾ÑÑ‚ÑƒÑŽ Ñ‚Ð¾Ñ‡ÐºÑƒ Ñ Ð¼ÐµÑ‚Ð°Ð´Ð°Ð½Ð½Ñ‹Ð¼Ð¸
		area2d.set_meta("point_id", point_data.id)
		area2d.input_event.connect(func(_viewport, event, _shape_idx): _on_simple_point_clicked(point_data.id, event))
		update_simple_point_appearance(area2d, point_data)
	
	return area2d

func update_point_appearance_directly(point_node: Node, point_data):
	"""ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÑ‚ Ð²Ð½ÐµÑˆÐ½Ð¸Ð¹ Ð²Ð¸Ð´ Ñ‚Ð¾Ñ‡ÐºÐ¸ Ð½Ð°Ð¿Ñ€ÑÐ¼ÑƒÑŽ"""
	if not point_node.has_method("update_appearance"):
		return
	
	# Ð£ÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÐ¼ ÑÐ²Ð¾Ð¹ÑÑ‚Ð²Ð°
	point_node.set("point_id", point_data.id)
	point_node.set("event_type", point_data.event_type)
	point_node.set("is_branch_point", point_data.is_branch)
	point_node.set("is_visited", point_data.is_visited)
	point_node.set("is_current", point_data.is_current)
	
	# ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÐ¼ Ð²Ð½ÐµÑˆÐ½Ð¸Ð¹ Ð²Ð¸Ð´
	point_node.update_appearance()

func update_simple_point_appearance(point_node: Node, point_data):
	"""ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÑ‚ Ð²Ð½ÐµÑˆÐ½Ð¸Ð¹ Ð²Ð¸Ð´ Ð¿Ñ€Ð¾ÑÑ‚Ð¾Ð¹ Ñ‚Ð¾Ñ‡ÐºÐ¸"""
	var background = point_node.get_node_or_null("Background")
	var icon = point_node.get_node_or_null("Icon")
	
	if background and icon:
		# Ð£ÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÐ¼ Ñ†Ð²ÐµÑ‚ Ð² Ð·Ð°Ð²Ð¸ÑÐ¸Ð¼Ð¾ÑÑ‚Ð¸ Ð¾Ñ‚ ÑÐ¾ÑÑ‚Ð¾ÑÐ½Ð¸Ñ
		if point_data.is_current:
			background.color = Color.YELLOW
		elif point_data.is_visited:
			background.color = Color.GRAY
		elif point_data.is_branch:
			background.color = Color.GREEN
		else:
			background.color = Color.WHITE
		
		# Ð£ÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÐ¼ Ð¸ÐºÐ¾Ð½ÐºÑƒ
		var icons = ["â€¢", "âš”ï¸", "ðŸª¤", "ðŸ›’", "â“"]
		icon.text = icons[point_data.event_type]

func _on_simple_point_clicked(point_id: int, event: InputEvent):
	"""ÐžÐ±Ñ€Ð°Ð±Ð°Ñ‚Ñ‹Ð²Ð°ÐµÑ‚ ÐºÐ»Ð¸Ðº Ð¿Ð¾ Ð¿Ñ€Ð¾ÑÑ‚Ð¾Ð¹ Ñ‚Ð¾Ñ‡ÐºÐµ"""
	if event is InputEventMouseButton:
		var mouse_event = event as InputEventMouseButton
		if mouse_event.pressed and mouse_event.button_index == MOUSE_BUTTON_LEFT:
			_on_point_selected(point_id)

func _on_point_selected(point_id: int):
	"""ÐžÐ±Ñ€Ð°Ð±Ð°Ñ‚Ñ‹Ð²Ð°ÐµÑ‚ Ð²Ñ‹Ð±Ð¾Ñ€ Ñ‚Ð¾Ñ‡ÐºÐ¸ Ð¸Ð³Ñ€Ð¾ÐºÐ¾Ð¼"""
	print("Ð’Ñ‹Ð±Ñ€Ð°Ð½Ð° Ñ‚Ð¾Ñ‡ÐºÐ°: ", point_id)
	
	# ÐŸÑ€Ð¾Ð²ÐµÑ€ÑÐµÐ¼, Ñ‡Ñ‚Ð¾ ÑÑ‚Ð¾ Ñ‚Ð¾Ñ‡ÐºÐ° Ñ€Ð°Ð·Ð²Ð¸Ð»ÐºÐ¸
	var point_data = get_point_data_by_id(point_id)
	if not point_data or not point_data.is_branch:
		log_message("Ð­Ñ‚Ð° Ñ‚Ð¾Ñ‡ÐºÐ° Ð½Ðµ ÑÐ²Ð»ÑÐµÑ‚ÑÑ Ñ€Ð°Ð·Ð²Ð¸Ð»ÐºÐ¾Ð¹!")
		return
	
	# Ð¡Ð¾Ñ…Ñ€Ð°Ð½ÑÐµÐ¼ Ð²Ñ‹Ð±Ñ€Ð°Ð½Ð½Ñ‹Ð¹ Ð¿ÑƒÑ‚ÑŒ
	selected_path_id = point_id
	is_path_selected = true
	
	log_message("Ð’Ñ‹Ð±Ñ€Ð°Ð½ Ð¿ÑƒÑ‚ÑŒ Ðº Ñ‚Ð¾Ñ‡ÐºÐµ " + str(point_id))
	
	# ÐžÑ‚ÐºÐ»ÑŽÑ‡Ð°ÐµÐ¼ ÐºÐ»Ð¸ÐºÐ¸ Ð´Ð»Ñ Ð²ÑÐµÑ… Ñ‚Ð¾Ñ‡ÐµÐº
	disable_all_point_clicks()
	
	# Ð£Ð´Ð°Ð»ÑÐµÐ¼ Ð½ÐµÐ²Ñ‹Ð±Ñ€Ð°Ð½Ð½Ñ‹Ðµ Ñ‚Ð¾Ñ‡ÐºÐ¸
	remove_unselected_points(point_id)
	
	# Ð“ÐµÐ½ÐµÑ€Ð¸Ñ€ÑƒÐµÐ¼ Ð½Ð¾Ð²Ñ‹Ð¹ ÑÐµÐ³Ð¼ÐµÐ½Ñ‚ Ð¾Ñ‚ Ð²Ñ‹Ð±Ñ€Ð°Ð½Ð½Ð¾Ð¹ Ñ‚Ð¾Ñ‡ÐºÐ¸
	generate_new_segment_from_point(point_id)

func disable_all_point_clicks():
	"""ÐžÑ‚ÐºÐ»ÑŽÑ‡Ð°ÐµÑ‚ ÐºÐ»Ð¸ÐºÐ¸ Ð´Ð»Ñ Ð²ÑÐµÑ… Ñ‚Ð¾Ñ‡ÐµÐº"""
	for point_node in point_nodes:
		if is_instance_valid(point_node):
			if point_node.has_method("disable_click"):
				point_node.disable_click()
			else:
				# Ð”Ð»Ñ Ð¿Ñ€Ð¾ÑÑ‚Ñ‹Ñ… Ñ‚Ð¾Ñ‡ÐµÐº
				point_node.monitoring = false
				point_node.monitorable = false

func remove_unselected_points(selected_point_id: int):
	"""Ð£Ð´Ð°Ð»ÑÐµÑ‚ Ð½ÐµÐ²Ñ‹Ð±Ñ€Ð°Ð½Ð½Ñ‹Ðµ Ñ‚Ð¾Ñ‡ÐºÐ¸"""
	var points_to_remove = []
	
	# ÐÐ°Ñ…Ð¾Ð´Ð¸Ð¼ Ñ‚Ð¾Ñ‡ÐºÐ¸ Ð´Ð»Ñ ÑƒÐ´Ð°Ð»ÐµÐ½Ð¸Ñ
	for point_node in point_nodes:
		if is_instance_valid(point_node):
			var point_id = -1
			if point_node.has_method("get_point_id"):
				point_id = point_node.get("point_id")
			elif point_node.has_meta("point_id"):
				point_id = point_node.get_meta("point_id")
			
			if point_id != selected_point_id and point_id != map_generator.current_point_id:
				points_to_remove.append(point_node)
	
	# Ð£Ð´Ð°Ð»ÑÐµÐ¼ Ñ‚Ð¾Ñ‡ÐºÐ¸
	for point_node in points_to_remove:
		if is_instance_valid(point_node):
			point_node.queue_free()
		point_nodes.erase(point_node)
	
	print("Ð£Ð´Ð°Ð»ÐµÐ½Ð¾ ", points_to_remove.size(), " Ð½ÐµÐ²Ñ‹Ð±Ñ€Ð°Ð½Ð½Ñ‹Ñ… Ñ‚Ð¾Ñ‡ÐµÐº")

func generate_new_segment_from_point(point_id: int):
	"""Ð“ÐµÐ½ÐµÑ€Ð¸Ñ€ÑƒÐµÑ‚ Ð½Ð¾Ð²Ñ‹Ð¹ ÑÐµÐ³Ð¼ÐµÐ½Ñ‚ Ð¾Ñ‚ Ð²Ñ‹Ð±Ñ€Ð°Ð½Ð½Ð¾Ð¹ Ñ‚Ð¾Ñ‡ÐºÐ¸"""
	# Ð’Ñ‹Ð±Ð¸Ñ€Ð°ÐµÐ¼ Ð¿ÑƒÑ‚ÑŒ Ð² Ð³ÐµÐ½ÐµÑ€Ð°Ñ‚Ð¾Ñ€Ðµ
	map_generator.select_path(point_id)
	
	# ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÐ¼ Ð´Ð°Ð½Ð½Ñ‹Ðµ ÐºÐ°Ñ€Ñ‚Ñ‹
	map_points = map_generator.points
	
	# Ð¡Ð¾Ð·Ð´Ð°ÐµÐ¼ Ð½Ð¾Ð²Ñ‹Ðµ ÑƒÐ·Ð»Ñ‹ Ñ‚Ð¾Ñ‡ÐµÐº
	await create_point_nodes()
	
	# ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÐ¼ Ð»Ð¸Ð½Ð¸Ð¸ Ð¿ÑƒÑ‚Ð¸
	update_path_lines()
	
	# Ð£ÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÐ¼ Ð¿ÑƒÑ‚ÑŒ Ð´Ð»Ñ Ð¾Ñ‚Ñ€ÑÐ´Ð°
	set_party_path()
	
	log_message("ÐÐ¾Ð²Ñ‹Ð¹ ÑÐµÐ³Ð¼ÐµÐ½Ñ‚ ÑÐ³ÐµÐ½ÐµÑ€Ð¸Ñ€Ð¾Ð²Ð°Ð½!")

func update_path_lines():
	"""ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÑ‚ Ð»Ð¸Ð½Ð¸Ð¸ Ð¿ÑƒÑ‚Ð¸"""
	path_line.clear_points()
	
	# Ð Ð¸ÑÑƒÐµÐ¼ Ð²ÑÐµ ÑÐ²ÑÐ·Ð¸ Ð¼ÐµÐ¶Ð´Ñƒ Ñ‚Ð¾Ñ‡ÐºÐ°Ð¼Ð¸
	var connections = map_generator.get_all_connections()
	for connection in connections:
		var from_point = get_point_data_by_id(connection[0])
		var to_point = get_point_data_by_id(connection[1])
		
		if from_point and to_point:
			path_line.add_point(from_point.position)
			path_line.add_point(to_point.position)

func set_party_path():
	"""Ð£ÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÑ‚ Ð¿ÑƒÑ‚ÑŒ Ð´Ð»Ñ Ð¾Ñ‚Ñ€ÑÐ´Ð°"""
	var path_points: Array[Vector2] = []
	
	# ÐŸÐ¾Ð»ÑƒÑ‡Ð°ÐµÐ¼ Ð¿ÑƒÑ‚ÑŒ Ð¾Ñ‚ Ñ‚ÐµÐºÑƒÑ‰ÐµÐ¹ Ñ‚Ð¾Ñ‡ÐºÐ¸ Ð´Ð¾ ÑÐ»ÐµÐ´ÑƒÑŽÑ‰ÐµÐ¹
	var current_point = get_current_point_data()
	var next_point = get_next_point_data()
	
	if current_point and next_point:
		path_points.append(current_point.position)
		path_points.append(next_point.position)
		
		# Ð£ÑÑ‚Ð°Ð½Ð°Ð²Ð»Ð¸Ð²Ð°ÐµÐ¼ Ð¿ÑƒÑ‚ÑŒ Ð´Ð»Ñ Ð¾Ñ‚Ñ€ÑÐ´Ð°
		party.set_path(path_points)
		
		log_message("ÐžÑ‚Ñ€ÑÐ´ Ð´Ð²Ð¸Ð¶ÐµÑ‚ÑÑ Ðº ÑÐ»ÐµÐ´ÑƒÑŽÑ‰ÐµÐ¹ Ñ‚Ð¾Ñ‡ÐºÐµ...")

func on_party_reached_point(point_index: int):
	"""ÐžÐ±Ñ€Ð°Ð±Ð°Ñ‚Ñ‹Ð²Ð°ÐµÑ‚ Ð´Ð¾ÑÑ‚Ð¸Ð¶ÐµÐ½Ð¸Ðµ Ñ‚Ð¾Ñ‡ÐºÐ¸ Ð¾Ñ‚Ñ€ÑÐ´Ð¾Ð¼"""
	print("ÐžÑ‚Ñ€ÑÐ´ Ð´Ð¾ÑÑ‚Ð¸Ð³ Ñ‚Ð¾Ñ‡ÐºÐ¸: ", point_index)
	
	# ÐÐ°Ñ…Ð¾Ð´Ð¸Ð¼ Ð´Ð°Ð½Ð½Ñ‹Ðµ Ñ‚Ð¾Ñ‡ÐºÐ¸
	var point_data = get_point_data_by_id(point_index)
	if not point_data:
		return
	
	# ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÐ¼ ÑÐ¾ÑÑ‚Ð¾ÑÐ½Ð¸Ðµ Ñ‚Ð¾Ñ‡ÐºÐ¸
	point_data.is_visited = true
	point_data.is_current = false
	
	# ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÐ¼ ÑƒÐ·ÐµÐ» Ñ‚Ð¾Ñ‡ÐºÐ¸
	var point_node = get_point_node_by_id(point_index)
	if point_node:
		if point_node.has_method("set_visited"):
			point_node.set_visited(true)
		else:
			# ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÐ¼ Ð¿Ñ€Ð¾ÑÑ‚ÑƒÑŽ Ñ‚Ð¾Ñ‡ÐºÑƒ
			if point_node.has_method("set"):
				point_node.set("is_visited", true)
			else:
				point_node.set_meta("is_visited", true)
			update_simple_point_appearance(point_node, point_data)
	
	# ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÐ¼ Ð²Ð½ÐµÑˆÐ½Ð¸Ð¹ Ð²Ð¸Ð´
	if point_node and point_node.has_method("update_appearance"):
		point_node.update_appearance()
	
	# Ð›Ð¾Ð³Ð¸Ñ€ÑƒÐµÐ¼ ÑÐ¾Ð±Ñ‹Ñ‚Ð¸Ðµ
	var event_name = "ÐÐµÐ¸Ð·Ð²ÐµÑÑ‚Ð½Ð¾"
	if point_node and point_node.has_method("get_event_type_name"):
		event_name = point_node.get_event_type_name()
	else:
		# Ð”Ð»Ñ Ð¿Ñ€Ð¾ÑÑ‚Ñ‹Ñ… Ñ‚Ð¾Ñ‡ÐµÐº
		var event_names = ["ÐŸÑƒÑÑ‚Ð¾", "Ð‘Ð¾Ð¹", "Ð›Ð¾Ð²ÑƒÑˆÐºÐ°", "Ð¢Ð¾Ñ€Ð³Ð¾Ð²ÐµÑ†", "Ð¡Ð»ÑƒÑ‡Ð°Ð¹Ð½Ð¾Ðµ"]
		event_name = event_names[point_data.event_type]
	
	log_message("Ð”Ð¾ÑÑ‚Ð¸Ð³Ð½ÑƒÑ‚Ð° Ñ‚Ð¾Ñ‡ÐºÐ° " + str(point_index) + " - " + event_name)
	
	# ÐŸÑ€Ð¾Ð²ÐµÑ€ÑÐµÐ¼, Ð´Ð¾ÑÑ‚Ð¸Ð³Ð»Ð¸ Ð»Ð¸ ÐºÐ¾Ð½Ñ†Ð° ÑÐµÐ³Ð¼ÐµÐ½Ñ‚Ð°
	if map_generator.is_at_segment_end():
		log_message("Ð”Ð¾ÑÑ‚Ð¸Ð³Ð½ÑƒÑ‚ ÐºÐ¾Ð½ÐµÑ† ÑÐµÐ³Ð¼ÐµÐ½Ñ‚Ð° - Ð²Ñ‹Ð±ÐµÑ€Ð¸Ñ‚Ðµ Ð¿ÑƒÑ‚ÑŒ Ð´Ð»Ñ Ð¿Ñ€Ð¾Ð´Ð¾Ð»Ð¶ÐµÐ½Ð¸Ñ")
		enable_branch_point_clicks()

func enable_branch_point_clicks():
	"""Ð’ÐºÐ»ÑŽÑ‡Ð°ÐµÑ‚ ÐºÐ»Ð¸ÐºÐ¸ Ð¿Ð¾ Ñ‚Ð¾Ñ‡ÐºÐ°Ð¼ Ñ€Ð°Ð·Ð²Ð¸Ð»Ð¾Ðº"""
	var branch_points = map_generator.get_branch_points()
	
	for point_node in point_nodes:
		if is_instance_valid(point_node):
			var point_id = -1
			if point_node.has_method("get_point_id"):
				point_id = point_node.get("point_id")
			elif point_node.has_meta("point_id"):
				point_id = point_node.get_meta("point_id")
			
			# ÐŸÑ€Ð¾Ð²ÐµÑ€ÑÐµÐ¼, ÑÐ²Ð»ÑÐµÑ‚ÑÑ Ð»Ð¸ ÑÑ‚Ð¾ Ñ‚Ð¾Ñ‡ÐºÐ¾Ð¹ Ñ€Ð°Ð·Ð²Ð¸Ð»ÐºÐ¸
			for branch_point in branch_points:
				if branch_point.id == point_id:
					# Ð’ÐºÐ»ÑŽÑ‡Ð°ÐµÐ¼ ÐºÐ»Ð¸ÐºÐ¸ Ð´Ð»Ñ ÑÑ‚Ð¾Ð¹ Ñ‚Ð¾Ñ‡ÐºÐ¸
					point_node.monitoring = true
					point_node.monitorable = true
					break

func on_party_movement_completed():
	"""ÐžÐ±Ñ€Ð°Ð±Ð°Ñ‚Ñ‹Ð²Ð°ÐµÑ‚ Ð·Ð°Ð²ÐµÑ€ÑˆÐµÐ½Ð¸Ðµ Ð´Ð²Ð¸Ð¶ÐµÐ½Ð¸Ñ Ð¾Ñ‚Ñ€ÑÐ´Ð°"""
	print("Ð”Ð²Ð¸Ð¶ÐµÐ½Ð¸Ðµ Ð¾Ñ‚Ñ€ÑÐ´Ð° Ð·Ð°Ð²ÐµÑ€ÑˆÐµÐ½Ð¾")

func get_point_data_by_id(id: int):
	"""Ð’Ð¾Ð·Ð²Ñ€Ð°Ñ‰Ð°ÐµÑ‚ Ð´Ð°Ð½Ð½Ñ‹Ðµ Ñ‚Ð¾Ñ‡ÐºÐ¸ Ð¿Ð¾ ID"""
	for point_data in map_points:
		if point_data.id == id:
			return point_data
	return null

func get_point_node_by_id(id: int) -> Node:
	"""Ð’Ð¾Ð·Ð²Ñ€Ð°Ñ‰Ð°ÐµÑ‚ ÑƒÐ·ÐµÐ» Ñ‚Ð¾Ñ‡ÐºÐ¸ Ð¿Ð¾ ID"""
	for point_node in point_nodes:
		# ÐŸÑ€Ð¾Ð²ÐµÑ€ÑÐµÐ¼ Ñ‚Ð¾Ñ‡ÐºÐ¸ ÑÐ¾ ÑÐºÑ€Ð¸Ð¿Ñ‚Ð¾Ð¼
		if point_node.has_method("get_point_id") and point_node.get("point_id") == id:
			return point_node
		# ÐŸÑ€Ð¾Ð²ÐµÑ€ÑÐµÐ¼ Ð¿Ñ€Ð¾ÑÑ‚Ñ‹Ðµ Ñ‚Ð¾Ñ‡ÐºÐ¸
		elif point_node.has_meta("point_id") and point_node.get_meta("point_id") == id:
			return point_node
	return null

func get_current_point_data():
	"""Ð’Ð¾Ð·Ð²Ñ€Ð°Ñ‰Ð°ÐµÑ‚ Ð´Ð°Ð½Ð½Ñ‹Ðµ Ñ‚ÐµÐºÑƒÑ‰ÐµÐ¹ Ñ‚Ð¾Ñ‡ÐºÐ¸"""
	return get_point_data_by_id(map_generator.current_point_id)

func get_next_point_data():
	"""Ð’Ð¾Ð·Ð²Ñ€Ð°Ñ‰Ð°ÐµÑ‚ Ð´Ð°Ð½Ð½Ñ‹Ðµ ÑÐ»ÐµÐ´ÑƒÑŽÑ‰ÐµÐ¹ Ñ‚Ð¾Ñ‡ÐºÐ¸"""
	var current_point = get_current_point_data()
	if not current_point:
		return null
	
	var connections = map_generator.get_connections_for_point(current_point.id)
	for connection in connections:
		var connected_point = get_point_data_by_id(connection)
		if connected_point and not connected_point.is_visited:
			return connected_point
	
	return null

func _process(delta):
	"""ÐžÐ±Ð½Ð¾Ð²Ð»ÑÐµÑ‚ Ð¿Ð¾Ð·Ð¸Ñ†Ð¸ÑŽ ÐºÐ°Ð¼ÐµÑ€Ñ‹"""
	if camera and party:
		var target_position = party.get_current_position() + camera_offset
		camera.position = target_position

func log_message(message: String):
	"""Ð›Ð¾Ð³Ð¸Ñ€ÑƒÐµÑ‚ ÑÐ¾Ð¾Ð±Ñ‰ÐµÐ½Ð¸Ðµ Ð² UI"""
	if ui_log:
		ui_log.text += message + "\n"
		# ÐžÐ³Ñ€Ð°Ð½Ð¸Ñ‡Ð¸Ð²Ð°ÐµÐ¼ Ð´Ð»Ð¸Ð½Ñƒ Ñ‚ÐµÐºÑÑ‚Ð° Ð´Ð»Ñ Label
		if ui_log.text.length() > 1000:
			ui_log.text = ui_log.text.right(-500)
	print(message) 
